--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/styles.css">
     <title>David's Responsive Layout Site</title>
 </head>
@@ -23,10 +24,10 @@
         </nav>
     </header>
 <!-- Bio Banner -->
-        <section class="banner">
-            <img class="profile-pic" src="images/responsive-layout-profile.png" alt="profile-pic">
-            <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web-development at Treehouse and am excited to put my skills to use! </p>
-        </section>
+    <section class="banner">
+        <img class="profile-pic" src="images/responsive-layout-profile.png" alt="profile-pic">
+        <p class="about-me">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web-development at Treehouse and am excited to put my skills to use! </p>
+    </section>
 <!-- Portfolio Section -->
         <section class="wrapper">
             <h2 id="portfolio">PORTFOLIO</h2>
@@ -71,11 +72,9 @@
         </div>
         <hr>
         <nav class="footer-nav">
-            <h3>Student Name</h3>
+            <h3>David McLaughlin</h3>
             <h3><a href="#header">BACK TO TOP</a></h3>
         </nav>
     </footer> 
-
-    
 </body>
 </html>
